src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --card: 35 33% 98%;
    --card-foreground: 34 13% 9%;
    --popover: 35 33% 98%;
    --popover-foreground: 34 13% 9%;
    --input: 34 10% 84%;

    --background: 60 33% 96%;
    --foreground: 60 7% 6%;
    --primary: 60 7% 6%;
    --primary-foreground: 60 100% 95%;
    --secondary: 60 6% 85%;
    --secondary-foreground: 60 7% 6%;
    --muted: 60 6% 85%;
    --muted-foreground: 60 5% 35%;
    --accent: 60 6% 85%;
    --accent-foreground: 60 7% 6%;
    --additive: 112 50% 36%;
    --additive-foreground: 0 0% 9%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --border: 60 6% 85%;
    --ring: 60 7% 6%
  }

  .dark {
    --card: 34 13% 9%;
    --card-foreground: 35 33% 98%;
    --popover: 34 13% 9%;
    --popover-foreground: 35 33% 98%;
    --input: 34 8% 15%;

    --background: 60 7% 6%;
    --foreground: 60 100% 95%;
    --primary: 60 100% 95%;
    --primary-foreground: 0 0% 9%;
    --secondary: 60 5% 18%;
    --secondary-foreground: 60 100% 95%;
    --muted: 60 5% 18%;
    --muted-foreground: 60 14% 71%;
    --accent: 60 5% 18%;
    --accent-foreground: 60 100% 95%;
    --additive: 112 50% 36%;
    --additive-foreground: 0 0% 9%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 60 100% 95%;
    --border: 60 5% 18%;
    --ring: 60 100% 95%
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground font-sans box-border antialiased min-h-screen flex flex-col;
  }
}

@layer utilities {
  .max-w-\(--breakpoint-md\) {
    max-width: 768px;
  }
}

